<resources>
    <string name="app__name">EasyNote</string>
    <string name="register">Register</string>
    <string name="send_vertify_code">Send verify code</string>
    <string name="phone_number">phone</string>
    <string name="vertify_code">verify code</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="please_input_validate_phone_number">Please input validate phone number</string>
    <string name="send_code_after_serval_second"><![CDATA[ReSend after %ds]]></string>
    <string name="auto_syn">Auto sync</string>
    <string name="send_vertify_code_fail">Send verify code failed!</string>
    <string name="vertify_code_not_allow_empty">Verify code not allow empty</string>
    <string name="username">username</string>
    <string name="go_to_register_now">Register now</string>
    <string name="forget_password">Forget password</string>
    <string name="login">Login</string>
    <string name="please_complete_fill_info">Please complete fill info</string>
    <string name="one_click_login">One click login</string>
    <string name="edit_activity_finish">Finish</string>
    <string name="edit_activity_edit_note">Edit note</string>
    <string name="edit_activity_edit">Edit</string>
    <string name="edit_activity_preview_note">Preview note</string>
    <string name="edit_activity_view_note">View note</string>
    <string name="have_not_write_perimission">Have no write permission</string>
    <string name="password_not_same">The two passwords are not the same</string>
    <string name="confirm_delete_current_note">Confirm delete current note?</string>
    <string name="setting">Setting</string>
    <string name="click_here_login">Click here login</string>
    <string name="exit">Exit</string>
    <string name="finish">Finish</string>
    <string name="edit_note">Edit note</string>
    <string name="preview">Preview</string>
    <string name="please_input_here_support_markdown">Please input here（support Markdown）</string>
    <string name="insert_picture">Insert Picture</string>
    <string name="insert_record">Insert record</string>
    <string name="insert_tag">Insert tag</string>
    <string name="preview_note">Preview note</string>
    <string name="note">Note</string>
    <string name="search">Search</string>
    <string name="just_now">Just now</string>
</resources>
